feat: 경주 우승자를 결정